--- a/overlays/prod/kustomization.yaml
+++ b/overlays/prod/kustomization.yaml
@@ -10,5 +10,6 @@ patchesStrategicMerge:
 - transactionhistory.yaml
 - userservice.yaml
 - frontend.yaml
+- frontend-ingress.yaml
 commonLabels:
   environment: prod
