--- a/base/loadgenerator.yaml
+++ b/base/loadgenerator.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: loadgenerator
-  namespace: loadgenerator
+  namespace: default
 spec:
   selector:
     matchLabels:
@@ -16,7 +16,6 @@ spec:
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
     spec:
-      serviceAccountName: cymbal-ksa
       terminationGracePeriodSeconds: 5
       restartPolicy: Always
       containers:
