--- a/overlays/dev/contacts.yaml
+++ b/overlays/dev/contacts.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: contacts
-  namespace: contacts
+  namespace: default
 spec:
   selector:
     matchLabels:
