--- a/overlays/dev/frontend.yaml
+++ b/overlays/dev/frontend.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
-  namespace: frontend 
+  namespace: default 
 spec:
   selector:
     matchLabels:
