--- a/overlays/dev/ledgerwriter.yaml
+++ b/overlays/dev/ledgerwriter.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ledgerwriter
-  namespace: ledgerwriter
+  namespace: default
 spec:
   selector:
     matchLabels:
