--- a/overlays/dev/transactionhistory.yaml
+++ b/overlays/dev/transactionhistory.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: transactionhistory
-  namespace: transactionhistory
+  namespace: default
 spec:
   selector:
     matchLabels:
