--- a/overlays/prod/balancereader.yaml
+++ b/overlays/prod/balancereader.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: balancereader
-  namespace: balancereader
+  namespace: default
 spec:
   selector:
     matchLabels:
