--- a/overlays/prod/loadgenerator.yaml
+++ b/overlays/prod/loadgenerator.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: loadgenerator
-  namespace: loadgenerator
+  namespace: default
 spec:
   selector:
     matchLabels:
