--- a/overlays/prod/userservice.yaml
+++ b/overlays/prod/userservice.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: userservice
-  namespace: userservice
+  namespace: default
 spec:
   selector:
     matchLabels:
