--- a/base/frontend.yaml
+++ b/base/frontend.yaml
@@ -1,8 +1,21 @@
+# Copyright 2019 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
-  namespace: default
 spec:
   selector:
     matchLabels:
@@ -11,12 +24,12 @@ spec:
     metadata:
       labels:
         app: frontend
-        org: cymbal-bank
     spec:
+      serviceAccountName: default
       terminationGracePeriodSeconds: 5
       containers:
       - name: front
-        image: frontend
+        image: gcr.io/bank-of-anthos/frontend:v0.4.3
         volumeMounts:
         - name: publickey
           mountPath: "/root/.ssh"
@@ -30,12 +43,12 @@ spec:
           value: "true"
         - name: SCHEME
           value: "http"
-         # Valid levels are debug, info, warning, error, critical. If no valid level is set, gunicorn will default to info.
+         # Valid levels are debug, info, warning, error, critical. If no valid level is set, defaults to info.
         - name: LOG_LEVEL
           value: "info"
         # Set to "true" to enable the CymbalBank logo + title
-        - name: CYMBAL_LOGO
-          value: "true"
+        # - name: CYMBAL_LOGO
+        #   value: "false"
         # Customize the bank name used in the header. Defaults to 'Bank of Anthos' - when CYMBAL_LOGO is true, uses 'CymbalBank'
         # - name: BANK_NAME
         #   value: ""
@@ -87,8 +100,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
-  labels:
-    org: cymbal-bank
 spec:
   type: LoadBalancer
   selector:
