--- a/base/userservice.yaml
+++ b/base/userservice.yaml
@@ -1,8 +1,21 @@
+# Copyright 2019 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: userservice
-  namespace: default
 spec:
   selector:
     matchLabels:
@@ -11,12 +24,12 @@ spec:
     metadata:
       labels:
         app: userservice
-        org: cymbal-bank
     spec:
+      serviceAccountName: default
       terminationGracePeriodSeconds: 5
       containers:
       - name: userservice
-        image: userservice
+        image: gcr.io/bank-of-anthos/userservice:v0.4.3
         volumeMounts:
         - name: keys
           mountPath: "/root/.ssh"
@@ -35,7 +48,7 @@ spec:
           value: "3600"
         - name: PRIV_KEY_PATH
           value: "/root/.ssh/privatekey"
-        # Valid levels are debug, info, warning, error, critical. If no valid level is set, gunicorn will default to info.
+         # Valid levels are debug, info, warning, error, critical. If no valid level is set, defaults to info.
         - name: LOG_LEVEL
           value: "info"
         envFrom:
@@ -57,22 +70,6 @@ spec:
           limits:
             cpu: 500m
             memory: 256Mi
-      - name: cloudsql-proxy
-        resources:
-          limits:
-            cpu: "200m"
-            memory: "100Mi"
-        image: gcr.io/cloudsql-docker/gce-proxy:1.19.0-alpine
-        env:
-        - name: CONNECTION_NAME
-          valueFrom:
-            secretKeyRef:
-              name: cloud-sql-admin
-              key: connectionName
-        command: ["/cloud_sql_proxy",
-                  "-instances=$(CONNECTION_NAME)=tcp:5432"]
-        securityContext:
-          runAsNonRoot: true
       volumes:
       - name: keys
         secret:
@@ -82,13 +79,13 @@ spec:
             path: privatekey
           - key: jwtRS256.key.pub
             path: publickey
+
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: userservice
-  labels:
-    org: cymbal-bank
 spec:
   type: ClusterIP
   selector:
