--- a/overlays/prod/kustomization.yaml
+++ b/overlays/prod/kustomization.yaml
@@ -9,6 +9,7 @@ patchesStrategicMerge:
 - loadgenerator.yaml
 - transactionhistory.yaml
 - userservice.yaml
+resources:
 - frontend.yaml
 commonLabels:
   environment: prod
