--- a/rollout-draft/rollout.yaml
+++ b/rollout-draft/rollout.yaml
@@ -1,25 +1,29 @@
-# Copyright 2019 Google LLC
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Rollout
 metadata:
-  name: frontend
+  name: rollout-frontend
 spec:
+  strategy:
+    canary:
+      canaryService: rollout-frontend-canary
+      stableService: rollout-frontend-stable
+      trafficRouting:
+        istio:
+          virtualService:
+            name: rollout-frontend-vsvc
+            routes:
+            - primary # At least one route is required
+      steps:
+      - setWeight: 10
+      - pause: { duration: 20s }  
+      - setWeight: 20
+      - pause: { duration: 20s } 
+      - setWeight: 80
+      - pause: { duration: 20s } 
+      - setWeight: 100
   selector:
-    matchLabels:
-      app: frontend
+      matchLabels:
+        app: frontend
   template:
     metadata:
       labels:
@@ -43,15 +47,8 @@ spec:
           value: "true"
         - name: SCHEME
           value: "http"
-         # Valid levels are debug, info, warning, error, critical. If no valid level is set, defaults to info.
         - name: LOG_LEVEL
           value: "info"
-        # Set to "true" to enable the CymbalBank logo + title
-        # - name: CYMBAL_LOGO
-        #   value: "false"
-        # Customize the bank name used in the header. Defaults to 'Bank of Anthos' - when CYMBAL_LOGO is true, uses 'CymbalBank'
-        # - name: BANK_NAME
-        #   value: ""
         - name: DEFAULT_USERNAME
           valueFrom:
             configMapKeyRef:
@@ -95,16 +92,3 @@ spec:
           items:
           - key: jwtRS256.key.pub
             path: publickey
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend
-spec:
-  type: LoadBalancer
-  selector:
-    app: frontend
-  ports:
-  - name: http
-    port: 80
-    targetPort: 8080
