--- a/overlays/prod/frontend.yaml
+++ b/overlays/prod/frontend.yaml
@@ -45,7 +45,7 @@ spec:
   gateways:
   - frontend-gateway
   hosts:
-  - rollout-frontend.local
+  - frontend
   http:
   - name: primary  # Should match spec.strategy.canary.trafficRouting.istio.virtualService.routes
     route:
