--- a/overlays/prod/frontend.yaml
+++ b/overlays/prod/frontend.yaml
@@ -4,7 +4,7 @@ metadata:
   name: rollout-frontend-stable
 spec:
   selector:
-    app: rollout-frontend
+    app: frontend
   ports:
   - name: http
     port: 80
@@ -16,7 +16,7 @@ metadata:
   name: rollout-frontend-canary
 spec:
   selector:
-    app: rollout-frontend 
+    app: frontend 
   ports:
   - name: http
     port: 80
