update rollout selector

--- a/overlays/prod/frontend.yaml
+++ b/overlays/prod/frontend.yaml
@@ -81,7 +81,7 @@ spec:
       - setWeight: 100
   selector:
     matchLabels:
-      app: rollout-frontend
+      app: frontend
   template:
     metadata:
       labels:
