--- a/overlays/prod/frontend.yaml
+++ b/overlays/prod/frontend.yaml
@@ -85,7 +85,7 @@ spec:
   template:
     metadata:
       labels:
-        app: rollout-frontend
+        app: frontend
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
