--- a/overlays/dev/loadgenerator.yaml
+++ b/overlays/dev/loadgenerator.yaml
@@ -11,6 +11,7 @@ spec:
     spec: 
       containers:
       - name: loadgenerator
+        image: loadgenerator
         env:
         - name: LOG_LEVEL
           value: "debug"
