--- a/overlays/dev/contacts.yaml
+++ b/overlays/dev/contacts.yaml
@@ -11,6 +11,7 @@ spec:
     spec: 
       containers:
       - name: contacts
+        image: contacts
         env:
         - name: ENABLE_TRACING
           value: "false"
