--- a/overlays/dev/frontend.yaml
+++ b/overlays/dev/frontend.yaml
@@ -29,7 +29,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: front
-        image: gcr.io/bank-of-anthos/frontend:v0.4.3
+        image: frontend 
         volumeMounts:
         - name: publickey
           mountPath: "/root/.ssh"
