--- a/overlays/dev/transactionhistory.yaml
+++ b/overlays/dev/transactionhistory.yaml
@@ -11,6 +11,7 @@ spec:
     spec: 
       containers:
       - name: transactionhistory
+        image: transactionhistory
         env:
         - name: ENABLE_TRACING
           value: "false"
