Updated image tag: 737f7e6 Built from commit 737f7e63db6ca68c7ffd6c7339e92e4bfd464df9 of repository cymbal-source - main branch Author: askmeegs <megan037@gmail.com>

--- a/overlays/prod/contacts.yaml
+++ b/overlays/prod/contacts.yaml
@@ -11,7 +11,7 @@ spec:
     spec: 
       containers:
       - name: contacts
-        image: gcr.io/bank-of-anthos/contacts:v0.4.3
+        image: gcr.io/megan-streams/cymbal-bank/release/contacts:737f7e6
         env:
         - name: ENABLE_TRACING
           value: "true"
