--- a/overlays/prod/balancereader.yaml
+++ b/overlays/prod/balancereader.yaml
@@ -11,7 +11,7 @@ spec:
     spec: 
       containers:
       - name: balancereader
-        image: gcr.io/bank-of-anthos/balancereader:v0.4.3
+        image: gcr.io/megan-streams/cymbal-bank/release/balancereader:737f7e6
         env:
         - name: ENABLE_TRACING
           value: "true"
