--- a/overlays/prod/frontend.yaml
+++ b/overlays/prod/frontend.yaml
@@ -91,7 +91,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: front
-        image: gcr.io/bank-of-anthos/frontend:v0.5.0
+        image: gcr.io/megan-streams/cymbal-bank/release/frontend:737f7e6
         volumeMounts:
         - name: publickey
           mountPath: "/root/.ssh"
