--- a/overlays/prod/loadgenerator.yaml
+++ b/overlays/prod/loadgenerator.yaml
@@ -11,7 +11,7 @@ spec:
     spec: 
       containers:
       - name: loadgenerator
-        image: gcr.io/bank-of-anthos/loadgenerator:v0.4.3
+        image: gcr.io/megan-streams/cymbal-bank/release/loadgenerator:737f7e6
         env:
         - name: LOG_LEVEL
           value: "info"
