--- a/overlays/prod/userservice.yaml
+++ b/overlays/prod/userservice.yaml
@@ -11,7 +11,7 @@ spec:
     spec: 
       containers:
       - name: userservice
-        image: gcr.io/bank-of-anthos/userservice:v0.4.3
+        image: gcr.io/megan-streams/cymbal-bank/release/userservice:737f7e6
         env:
         - name: ENABLE_TRACING
           value: "true"
